--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </ul>
     </header>
     <section>
-        <img src="/Gallery Website/img/stars.png" id="stars">
-        <img src="/Gallery Website/img/moon.png" id="moon">
-        <img src="/Gallery Website/img/mountains_behind.png" id="mountains_behind">
+        <img src="/Gallery /img/stars.png" id="stars">
+        <img src="/Gallery /img/moon.png" id="moon">
+        <img src="/Gallery /img/mountains_behind.png" id="mountains_behind">
         <h2 id="text">Moon light</h2>
         <a href="#sec" id="btn">Explore</a>
-        <img src="/Gallery Website/img/mountains_front.png" id="mountains_front">
+        <img src="/Gallery /img/mountains_front.png" id="mountains_front">
     </section>
     <div class="sec" id="sec">
         <h2>Parallax Scrolling Effect</h2>
